--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/checkout@v2
       -
         name: Get version
-        id: pkg
-        run: echo "::set-output name=version::$(node -p "require('./redisinsight/package.json').version")"
+        run: echo "$(node -p "require('./redisinsight/package.json').version")" >> $APP_VERSION
       -
         name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -34,4 +33,4 @@ jobs:
         with:
           push: true
           platforms: linux/amd64,linux/arm64
-          tags: ammaroker/redisinsight:latest,ammaroker/redisinsight:${{ steps.pkg.outputs.version }}
+          tags: "ammaroker/redisinsight:latest","ammaroker/redisinsight:$APP_VERSION"
